--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<!-- GOOGLE FONTS -->
 	<link href="https://fonts.googleapis.com/css2?family=Piazzolla:ital,wght@0,400;1,500&display=swap"
 		rel="stylesheet">
+		<link rel="stylesheet" href="./images/all">
 
 	<title>Fylo Cloud Storage</title>
 </head>
@@ -26,7 +27,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div>
-			<a class="navbar-brand mt-4" href="#"><img src="/images/logo.svg" alt="Fylo loga"></a>
+			<a class="navbar-brand mt-4" href="#"><img src="./images/logo.svg" alt="Fylo loga"></a>
 		</div>
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
 			<span class="navbar-toggler-icon"></span>
@@ -44,7 +45,7 @@
 	<!-- MAINBOX -->
 
 	<div class="main-box">
-		<img class="image-intro" src="images/illustration-intro.png" alt="Intro image">
+		<img class="image-intro" src="./images/illustration-intro.png" alt="Intro image">
 		<h1>All your files in one secure location, accessible everywhere</h1>
 		<p>Fylo stores all your most important files in one secure location. Access them everywhere your need,
 			share and
@@ -59,21 +60,21 @@
 		<div class="icon">
 			<div class="row row-icon">
 				<div class="col-lg-6">
-					<img src="/images/icon-access-anywhere.svg" alt="anywhere">
+					<img src="./images/icon-access-anywhere.svg" alt="anywhere">
 					<h3>Access your files anywhere you need</h3>
 					<p>The ability to use a smartphone, tablet, or computer to access your account
 						means your files follow you
 						everywhere you go</p>
 				</div>
 				<div class="col-lg-6">
-					<img src="/images/icon-security.svg" alt="security">
+					<img src="./images/icon-security.svg" alt="security">
 					<h3>Security you can alway trust</h3>
 					<p> 2- Factor authentication and user-controlled encryption are just a couple of
 						the security features we
 						allow to help secure your files</p>
 				</div>
 				<div class="col-lg-6">
-					<img src="/images/icon-collaboration.svg" alt="collaboration">
+					<img src="./images/icon-collaboration.svg" alt="collaboration">
 					<h3>Real-time collaboration </h3>
 					<p> Securely share files and folders with Friends, Family and colleagues for
 						real live collobaration. No
@@ -81,7 +82,7 @@
 						attachments required </p>
 				</div>
 				<div class="col-lg-6">
-					<img src="/images/icon-any-file.svg" alt="anyfiles">
+					<img src="./images/icon-any-file.svg" alt="anyfiles">
 					<h3>Store any type of file</h3>
 					<p> Whether you'ear sharing holidays photos or work documents, Fylo has you
 						covered allowing for all file
@@ -91,11 +92,11 @@
 		</div>
 	</section>
 
-	<!-- MIDDLE SECTION IMAGE -->
+	<!-- MIDDLE SECTION IMAGE  -->
 
 	<div class="row row-productive-sec">
 		<div class="col-lg-6">
-			<img src="/images/illustration-stay-productive.png" alt="stay-image">
+			<img src="./images/illustration-stay-productive.png" alt="stay-image">
 		</div>
 		<div class=" col-lg-6 product-text">
 			<h1>Stay productive, wherever you are</h1>
@@ -121,7 +122,7 @@
 				<p>Fylo has improved our team productivity by an order of magnitude.Since making the
 					switch our team has
 					become a well-oiled collaboration machine</p>
-				<img src="/images/profile-1.jpg" alt="Patel">
+				<img src="./images/profile-1.jpg" alt="Patel">
 				<h6>Satish Patel<br>
 					Founder and CEO, Huddle</h6>
 			</div>
@@ -131,7 +132,7 @@
 				<p>Fylo has improved our team productivity by an order of magnitude.Since making the
 					switch our team has
 					become a well-oiled collaboration machine</p>
-				<img src="/images/profile-2.jpg" alt="Bruce">
+				<img src="./images/profile-2.jpg" alt="Bruce">
 				<h6>Bruce McKEnzie<br>
 					Founder and CEO, Portland Pics
 				</h6>
@@ -144,7 +145,7 @@
 					switch our team
 					has
 					become a well-oiled collaboration machine</p>
-				<img src="/images/profile-3.jpg" alt="Iva">
+				<img src="./images/profile-3.jpg" alt="Iva">
 				<h6>Iva Boyd<br>
 					Founder and CEO, Luxury home
 				</h6>
@@ -172,17 +173,17 @@
 
 			<div class="footer-box d-flex">
 				<div class="logo">
-					<a href="#main-sec"><img src="images\logo.svg" alt="brand-logo"></a>
+					<a href="#main-sec"><img src="./images/logo.svg" alt="brand-logo"></a>
 				</div>
 				<div class="row footer-row ml-auto mt-5">
 					<div class="col-lg-4">
-						<p><img src="images\icon-location.svg"> Lorem ipsum dolor sit amet,
+						<p><img src="./images/icon-location.svg"> Lorem ipsum dolor sit amet,
 							consectetur adipiscing elit, sed do
 							eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 					</div>
 					<div class="col-lg-2">
-						<p><img src="images\icon-phone.svg"> +1-543-123-4567 </p>
-						<p><img src="images\icon-email.svg"> example@huddle.com</p>
+						<p><img src="./images/icon-phone.svg"> +1-543-123-4567 </p>
+						<p><img src="./images/icon-email.svg"> example@huddle.com</p>
 					</div>
 					<div class="col-lg-1">
 						<a href="#">About Us</a>
